[tool.poetry]
name = "maryland-crime"
version = "0.1.0"
description = "analysis of the kaggle maryland crime database"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
