[tool.poetry]
name = "maryland-crime"
version = "0.1.0"
description = "analysis of the kaggle maryland crime database"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
numpy = "^2.0.0"
scikit-learn = "^1.5.1"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
